<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <TextView
        android:id="@+id/updateDurationView"
        android:layout_width="148dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/empty_string"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/updateDistanceView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="106dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="30dp"
        android:text="@string/show_time_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/updateDateTimeView"
        android:layout_width="170dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/empty_string"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/updateDistanceView"
        android:layout_width="165dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/empty_string"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/updateDateTimeView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/show_distance_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/enterInfoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/info_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/empty_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="105dp"
        android:layout_height="43dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/show_duration_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:onClick="onClickedUpdate"
        android:text="@string/update_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectImageButton" />

    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:onClick="onClickedPhoto"
        android:text="@string/selectimage_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateImageView" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="24dp"
        android:onClick="onClickedDelete"
        android:text="@string/delete_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateButton" />

    <TextView
        android:id="@+id/updateImageView"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/empty_string"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterInfoView" />
</androidx.constraintlayout.widget.ConstraintLayout>