<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/adapNoteView"
        android:layout_width="141dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/dash_string"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/adapDurationView" />

    <TextView
        android:id="@+id/adapDurationView"
        android:layout_width="145dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/empty_string"
        app:layout_constraintStart_toEndOf="@+id/timeView"
        app:layout_constraintTop_toBottomOf="@+id/adapDistanceView" />

    <TextView
        android:id="@+id/adapDistanceView"
        android:layout_width="143dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/empty_string"
        app:layout_constraintStart_toEndOf="@+id/distanceView"
        app:layout_constraintTop_toBottomOf="@+id/adapDateTimeView" />

    <TextView
        android:id="@+id/idView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/show_time_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adapDateTimeView"
        android:layout_width="143dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/empty_string"
        app:layout_constraintStart_toEndOf="@+id/idView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distanceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/show_distance_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adapDateTimeView" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/show_duration_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:text="@string/show_des_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="277dp"
        android:layout_height="232dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>